--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <!-- About Us -->
   <div id="about">
     <h1>About Us</h1>
-    <p>DOM ENTERPRISE was established in the year 2017. We are the Supplier, Manufacturer and Trader of Grub Scrub,S.S & A105 MS & BRASS, Taper Plug, Metal Components, Brass Components, Steel Components, CNC & VMC Metal Components etc.  Designed as per the customer's drawings & requirements, each of our products are made from stainless steel 304 / stainless steel 316 / EN-8. Featured with high efficiency, our wide product line is used in automobiles, textiles, electrical switch-gears, valves, pumps and other industries. At our firm, we strive everyday to provide our customers quality products with world-class services. Our complete array is developed with quality raw materials that ensures high durability, optimum performance and high tensile strength. These are made using fine quality material. We offer these in different specifications and can be availed at market leading prices.</p>
+    <p>DOM ENTERPRISE was established in the year 2017. We are the Supplier, Manufacturer and Trader of Grub Scrub,S.S & A105 MS & BRASS, Taper Plug, Metal Components, Brass Components, Steel Components, CNC & VMC Metal Components etc.  Designed as per the customer's drawings & requirements, each of our products are made from stainless steel 304 / stainless steel 316 / EN-8. Featured with high efficiency, our wide product line is used in automobiles, textiles, electrical switch-gears, valves, pumps and other industries. At our firm, we strive everyday to provide our customers quality products with world-class services. </p>
   </div>
   <!-- // About Us -->
 
@@ -204,7 +204,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-12 segment-one md-mb-30 sm-mb-30">
             <h4>DOM ENTERRPISE</h4>
-            <p>Lorem ipsum olor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>DOM ENTERPRISE was established in the year 2017. Our complete array is developed with quality raw materials that ensures high durability, optimum performance and high tensile strength. These are made using fine quality material. We offer these in different specifications and can be availed at market leading prices.</p>
           </div>
           <div class="col-md-4 col-sm-12 segment-two md-mb-30 sm-mb-30">
             <h3>Popular Products</h3>
@@ -221,7 +221,7 @@
           <div class="col-md-4 col-sm-12 segment-three md-mb-30 sm-mb-30">
             <h3>Contact Us</h3>
             <form>
-              <input type="text" name="" placeholder="Enter you Name" required="required">
+              <input type="text" name="" placeholder="Enter your Name" required="required">
               <input type="email" name="" placeholder="Enter your Email" required="required">
               <textarea placeholder="Requirement Details" rows="5"></textarea>
               <br>
