--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
       </div>
     </div>
-    <p class="footer-bottom-text">Copyright &copy; Dom Enterprise 2020. All Rights Reserved</p>
+    <p class="footer-bottom-text">Copyright &copy; Dom Enterprise 2020. <br> All Rights Reserved</p>
   </footer>
 
   <!-- // Footer -->
